Getting the build to work on java 17