@@ -58,6 +58,10 @@ configurations {
     }
 }
 
+tasks.named("test").configure {
+    jvmArgs "--add-opens=java.base/java.io=ALL-UNNAMED" // Needed for IOUtils's BYTE_ARRAY_BUFFER reflection
+}
+
 dependencies {
     api(project(':elasticsearch-hadoop-mr'))
     api(project.ext.hadoopClient) {
